# openhexa-docker-images

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Makefile  README.md  build.sh  pyproject.toml  release-please-config.json
.github/workflows/: build_image.yml  release-please.yml
images/base/: Dockerfile  Dockerfile.back  entrypoint.sh  jupyter_notebook_config.py
images/base/files/: overrides.json
images/base/files/sample_files/: DO_NOT_WRITE_HERE.md
images/base/files/scripts/: bootstrap_pipeline.py  fix_permissions.sh  fuse_mount.py  fuse_umount.py  wrap_up.py
images/blsq/: Dockerfile
images/blsq-r/: Dockerfile
images/default/: Dockerfile
images/legacy/: Dockerfile
images/legacy/files/sample_files/: README.MD
images/legacy/files/scripts/: fuse_mount.py  fuse_unmount.py  wrap_up.py
images/r/: Dockerfile
images/sonder/: Dockerfile
tests/: README.md  conftest.py  test_local_pipelines.py  test_setup.py  testutils.py
tests/pipelines/fiona_import/: pipeline.py
tests/pipelines/multiply_by_two/: pipeline.py  workspace.yaml
tests/pipelines/pandas_to_sql/: pipeline.py
