[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openhexa-docker-images"
version = "1.13.0"
description = "Docker images for OpenHexa"
requires-python = ">=3.12"
dependencies = [
    "pytest>=7.4.0",
    "docker",
    "colorist==1.8.6"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v -s" 

